# Differentiator

./: .gitignore  CMakeLists.txt  README.md  new_project.sh
docs/: Doxyfile
docs/html/: CMakeFiles_2differentiator_8dir_2lib_2array_8c_8o_8d.html  CMakeFiles_2differentiator_8dir_2lib_2array_8c_8o_8d_source.html  CMakeFiles_2differentiator_8dir_2src_2calculate_8c_8o_8d.html  CMakeFiles_2differentiator_8dir_2src_2calculate_8c_8o_8d_source.html  CMakeFiles_2differentiator_8dir_2src_2differentiator_8c_8o_8d.html  CMakeFiles_2differentiator_8dir_2src_2differentiator_8c_8o_8d_source.html  CMakeFiles_2differentiator_8dir_2src_2print_8c_8o_8d.html  CMakeFiles_2differentiator_8dir_2src_2print_8c_8o_8d_source.html  DSL_8h.html  DSL_8h_source.html  README_8md.html  annotated.html  annotated_dup.js  array_8c.html  array_8c.js  array_8c_a403b3f4c9fe398e3d549c1f61eb72223_icgraph.map  array_8c_a403f081f1322e03c670fae269c3932c3_icgraph.map  array_8c_source.html  array_8h.html  array_8h.js  array_8h_a2cccab9f28107160d6429029c9089f6f_cgraph.map  array_8h_a2cccab9f28107160d6429029c9089f6f_cgraph.md5  array_8h_a2cccab9f28107160d6429029c9089f6f_icgraph.map  array_8h_a2cccab9f28107160d6429029c9089f6f_icgraph.md5  array_8h_a403b3f4c9fe398e3d549c1f61eb72223_icgraph.md5  array_8h_a403f081f1322e03c670fae269c3932c3_icgraph.md5  array_8h_source.html  build_2CMakeFiles_23_829_83_2CompilerIdCXX_2CMakeCXXCompilerId_8cpp.html  build_2CMakeFiles_23_829_83_2CompilerIdCXX_2CMakeCXXCompilerId_8cpp.js  build_2CMakeFiles_23_829_83_2CompilerIdCXX_2CMakeCXXCompilerId_8cpp_source.html  build_2CMakeFiles_23_829_83_2CompilerIdC_2CMakeCCompilerId_8c.html  build_2CMakeFiles_23_829_83_2CompilerIdC_2CMakeCCompilerId_8c.js  build_2CMakeFiles_23_829_83_2CompilerIdC_2CMakeCCompilerId_8c_source.html  build_2CMakeFiles_2differentiator_8dir_2src_2main_8c_8o_8d.html  build_2CMakeFiles_2differentiator_8dir_2src_2main_8c_8o_8d_source.html  build_2tests_2CMakeFiles_2test_8dir_2src_2main_8c_8o_8d.html  build_2tests_2CMakeFiles_2test_8dir_2src_2main_8c_8o_8d_source.html  build_2tests_2CMakeFiles_2test_8dir_2src_2unit_8c_8o_8d.html  build_2tests_2CMakeFiles_2test_8dir_2src_2unit_8c_8o_8d_source.html  build_2tests_2CMakeFiles_2test_8dir_2tests_2test__calc_8c_8o_8d.html  (+438 more)
docs/html/search/: all_0.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  all_a.js  all_c.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  files_1.js  files_2.js  files_3.js  files_4.js  files_6.js  files_7.js  files_8.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  (+21 more)
docs/latex/: refman.tex
images/: diff.dot  expression  opt1.dot  opt1_d.dot  opt2_d.dot
images/dot/: diff.dot  exp.dot
images/exp/: exp1.txt  exp2.txt
images/tex/: preamble.tex  res.tex  title.tex
include/: DSL.h  config.h  diff.h  differentiator.h  main.h  mydef.h  read.h
lib/: array.c  array.h
src/: a.out  calculate.c  calculate.cpp  differentiator.c  differentiator.cpp  main.c  main.cpp  print.c  print.cpp  read.c  test.dot
